--- a/CrmBuisnessLogic/CrmBuisnessLogic.csproj
+++ b/CrmBuisnessLogic/CrmBuisnessLogic.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>202102221928391_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Model\Cart.cs" />
     <Compile Include="Model\Check.cs" />
     <Compile Include="Model\CrmContext.cs" />
     <Compile Include="Model\Customer.cs" />
