--- a/CrmBuisnessLogic/CrmBuisnessLogic.csproj
+++ b/CrmBuisnessLogic/CrmBuisnessLogic.csproj
@@ -57,6 +57,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Cart.cs" />
+    <Compile Include="Model\CashDesc.cs" />
     <Compile Include="Model\Check.cs" />
     <Compile Include="Model\CrmContext.cs" />
     <Compile Include="Model\Customer.cs" />
@@ -73,6 +74,10 @@
     <EmbeddedResource Include="Migrations\202102221928391_init.resx">
       <DependentUpon>202102221928391_init.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LogicPictures\pictureQueue.png" />
+    <Content Include="LogicPictures\pictureRelationships.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
