--- a/CrmBuisnessLogicTests/CrmBuisnessLogicTests.csproj
+++ b/CrmBuisnessLogicTests/CrmBuisnessLogicTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Model\CartTests.cs" />
+    <Compile Include="Model\CashDescTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
