--- a/CrmBuisnessLogic/CrmBuisnessLogic.csproj
+++ b/CrmBuisnessLogic/CrmBuisnessLogic.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Migrations\202102221928391_init.designer.cs">
       <DependentUpon>202102221928391_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103181528242_update031821.cs" />
+    <Compile Include="Migrations\202103181528242_update031821.designer.cs">
+      <DependentUpon>202103181528242_update031821.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Cart.cs" />
     <Compile Include="Model\CashDesc.cs" />
@@ -75,6 +79,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202102221928391_init.resx">
       <DependentUpon>202102221928391_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103181528242_update031821.resx">
+      <DependentUpon>202103181528242_update031821.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
